--- a/src/styles/partials/_paragraph.scss
+++ b/src/styles/partials/_paragraph.scss
@@ -1,20 +1,20 @@
 .p-lg {
   margin: calc(50dvh - 280px) 0;
-  @media (max-width: 780px) {
+  @media (max-width: 768px) {
     margin: calc(50dvh - 320px) 0;
   }
 }
 
 .p-md {
   margin: calc(50dvh - 240px) 0;
-  @media (max-width: 780px) {
+  @media (max-width: 768px) {
     margin: calc(50dvh - 260px) 0;
   }
 }
 
 .p-sm {
   margin: calc(50dvh - 200px) 0;
-  @media (max-width: 780px) {
+  @media (max-width: 768px) {
     margin: calc(50dvh - 240px) 0;
   }
 }
